bitfield/tests/11-bits-attribute-wrong.stderr
error[E0308]: mismatched types
  --> tests/11-bits-attribute-wrong.rs:11:14
   |
11 |     #[bits = 9]
   |              ^
   |              |
   |              expected an array with a size of 9, found one with a size of 1
   |              expected because of the type of the constant
   |
help: consider specifying the actual array length
   |
11 -     #[bits = 9]
11 +     #[bits = 1]
   |
